[package]
name = "dblp-tools"
version = "0.1.0"
edition = "2024"
description = "helper tool for working with DBLP bibliographies"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.31"
indicatif = "0.17.11"
lazy_static = "1.5.0"
owo-colors = { version = "4.2.0", features = ["supports-colors"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.139"

[[bin]]
name = "dblp"
path = "src/main.rs"
