[package]
name = "dblp-tools"
version = "0.1.0"
edition = "2024"
description = "helper tool for working with DBLP bibliographies"

[dependencies]
camino = "1.2.1"
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
indicatif = "0.18.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.145"

[[bin]]
name = "dblp"
path = "src/main.rs"
