[package]
name = "dblp-tools"
version = "0.1.0"
edition = "2024"
description = "helper tool for working with DBLP bibliographies"

[dependencies]
camino = "1.2.2"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
itertools = "0.14.0"
indicatif = "0.18.3"
lazy_static = "1.5.0"
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0.149"

[[bin]]
name = "dblp"
path = "src/main.rs"
